@@ -1,6 +1,10 @@
 Change Notes
 =============
 
+2009-07-17 jbornema
+	- JdbcLoader completely implements batchSize for insert and update statements (can improve sql performance up to >100%!)
+	  If no batchSize is set, [connection name].connection.batch_size is used from server.properties, batchSize between 20 and 50 seems to work good
+
 2009-07-15 jbornema
 	- Little restructure in JDBCLoader
 	- DefaultMonitor logging adjusted
